--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -290,3 +290,14 @@
     }
   }
 }
+
+
+// Vertically center using a top margin.
+// -------------------------
+// Used by form-sidebar.less
+// .vertical-center mixin can cause issues with dropdown menus appearing behind other elements
+// Also allows us to move later to a 6px vertical baseline grid.
+
+.vertical-center-margin (@container-height; @element-height; @container-border-width: 1px) {
+    margin-top: floor((@container-height - @element-height) / 2) - @container-border-width;  
+}
