Remove lf- prefix from Fycon colors

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -570,7 +570,7 @@
     color: @brand-linkedin;
   }
   &.fycon-source-livefyre:before {
-    color: @lf-orange;
+    color: @orange;
   }
   &.fycon-source-pinterest:before {
     color: @brand-pinterest;
@@ -612,30 +612,30 @@
     color: @brand-youtube;
   }
   &.fycon-icon-chat:before {
-    color: @lf-green;
+    color: @green;
   }
   &.fycon-icon-comments:before {
-    color: @lf-red;
+    color: @red;
   }
   &.fycon-icon-liveblog:before {
-    color: @lf-blue;
+    color: @blue;
   }
   &.fycon-icon-map:before {
-    color: @lf-purple;
+    color: @purple;
   }
   &.fycon-icon-reviews:before {
-    color: @lf-yellow;
+    color: @yellow;
   }
   &.fycon-icon-sidenotes:before {
-    color: @lf-gray-darker;
+    color: @gray-darker;
   }
   &.fycon-icon-storify:before {
     color: @storify-blue;
   }
   &.fycon-icon-trending:before {
-    color: @lf-blue;
+    color: @blue;
   }
   &.fycon-icon-wall:before {
-    color: @lf-purple;
+    color: @purple;
   }
 }
