Remove lf- prefix from color variable in Input Groups

--- a/src/styles/input-groups.less
+++ b/src/styles/input-groups.less
@@ -29,7 +29,7 @@
     border: thin solid black;
 
     &:hover {
-      border: thin solid @lf-blue;
+      border: thin solid @blue;
     }
   }
 }
