--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -9,7 +9,7 @@
   &:hover,
   &:focus,
   .open .dropdown-toggle& {
-    .box-shadow(0 1px 2px fade(@lf-gray-darker, @shadow-percent));
+    .box-shadow(0 1px 2px fade(@gray-darker, @shadow-percent));
   }
 
   &:active,
@@ -18,7 +18,7 @@
     background-image: none;
     background-color: darken(@background, 5%);
         border-color: darken(@border, 5%);
-    .box-shadow(inset 0 1px 2px fade(@lf-gray-darker, 30%));
+    .box-shadow(inset 0 1px 2px fade(@gray-darker, 30%));
   }  
 }
 
