Remove lf- prefix from color variables in Badges

--- a/src/styles/badges.less
+++ b/src/styles/badges.less
@@ -6,15 +6,15 @@
   font-size: @badge-font-size;
 
   &.badge-mute {
-    color: @lf-gray-dark;
-    background-color: @lf-gray-lighter;
+    color: @gray-dark;
+    background-color: @gray-lighter;
   }
 }
 
 a.badge.badge-mute {
   &:hover,
   &:focus {
-    color: @lf-gray-dark;
+    color: @gray-dark;
     text-decoration: none;
     cursor: pointer;
   }
