--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -4,7 +4,7 @@
 @import (reference) "@{bootstrap-less}/utilities";
 @import (reference) "@{bootstrap-less}/navbar";
 
-.lf-navbar {
+.navbar {
     .navbar;
     .navbar-default;
 
