Remove lf- prefix from No-Data Block

--- a/src/styles/no-data.less
+++ b/src/styles/no-data.less
@@ -15,7 +15,7 @@
         margin: 0 auto 16px;
         font-size: 90px;
         line-height: 1;
-        color: @lf-gray-light;
+        color: @gray-light;
     }
     
     // Header
@@ -25,7 +25,7 @@
         font-size: 24px;
         font-weight: 600;
         line-height: 30px;
-        color: @lf-gray-dark;
+        color: @gray-dark;
     }
     
     // Subheader, buttons, links, etc.
@@ -34,6 +34,6 @@
         margin: 0 auto 16px;
         font-size: @font-size-base;
         line-height: 18px;
-        color: @lf-gray;
+        color: @gray;
     }
 }
