Remove our version of .dropdown-menu-right now that it comes with Bootstrap

--- a/src/styles/dropdowns.less
+++ b/src/styles/dropdowns.less
@@ -47,17 +47,9 @@
   }
 }
 
-// Menu aligmnment options
+// Center the Menu
 // 
-// Use alongside .dropdown-menu. Ex: <ul class="dropdown-menu dropdown-menu-right">
-//
-// .dropdown-menu-right introduced in TwBS v3.1.0 (.pull-right was deprecated)
-// .dropdown-menu-center is only in LF-BS.
-.dropdown-menu-right, // TODO: Remove once LF-BS's version of BS has been updated.
-.pull-right > .dropdown-menu-right { // Override TwBS styles in dropdowns.less
-  left: auto;
-  right: 0;
-}
+// Use alongside .dropdown-menu. Ex: <ul class="dropdown-menu dropdown-menu-center">
 
 .dropdown-menu-center,
 .pull-right > .dropdown-menu-center { // Override TwBS styles in dropdowns.less
