--- a/src/styles/toggles.less
+++ b/src/styles/toggles.less
@@ -21,7 +21,7 @@
 .toggle span {
   display: block;
   height: @toggle-height;
-  background-color: #eee;
+  background-color: @gray-8;
   border-radius: 100px;
   border: 1px solid #bbb;
   box-shadow: inset 0 0 4px rgba(0, 0, 0, .1);
@@ -132,7 +132,7 @@
     padding: 0 8px 0 @toggle-handle;
     content: attr(data-off);
     background-color: @toggle-off-bg;
-    color: #777;
+    color: @gray-2;
     text-align: center;
     text-shadow: 0 1px #fff;
     border-radius: 100px;
