--- a/src/styles/sidebar.less
+++ b/src/styles/sidebar.less
@@ -34,7 +34,7 @@
       vertical-align: middle;
       line-height: @header-height;
       border-bottom: 1px solid @gray;
-      background-color: #f7f7f8;
+      background-color: @gray-8;
       
       h1 {
         display: inline;
