Update gray variables.
Using descriptor words instead of numbering.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -6,23 +6,15 @@
 // Colors
 // -------------------------
 
-// Grays (LF variables)
-@gray-1:        #2f3440; // Prominent text
-@gray-2:        #595d66; // Paragraph text
-@gray-3:        #82858c; // Subtext text
-@gray-4:        #acaeb3; // Disabled text
-@gray-5:        #cbcccf; // Default button bg hover
-@gray-6:        #e0e1e3; // Default button bg
-@gray-7:        #efeff0; // Bg watermark
-@gray-8:        #f7f7f7; // Default bg
-
-// Equivalent Bootstrap variables
-@gray-base:     @gray-1;
-@gray-darker:   @gray-1;
-@gray-dark:     @gray-2;
-@gray:          @gray-5;
-@gray-light:    @gray-6;
-@gray-lighter:  @gray-7;
+@gray-base:     #2f3440; // 100% - Ex: Prominent text
+@gray-darkest:  #2f3440; // 100% - Ex: Prominent text (LF variable)
+@gray-darker:   #595d66; // 80%  - Ex: Paragraph text
+@gray-dark:     #82858c; // 60%  - Ex: Subtext text
+@gray-darkish:  #acaeb3; // 40%  - Ex: Disabled text (LF variable)
+@gray:          #cbcccf; // 25%  - Ex: Default button bg hover
+@gray-light:    #e0e1e3; // 15%  - Ex: Default button bg
+@gray-lighter:  #efeff0; // 8%   - Ex: Bg watermark
+@gray-lightest: #f7f7f7; // 4%   - Ex: Default bg (LF variable)
 
 @purple:        #7168a5;
 @blue:          #0f98ec;
