Fix button styles for Pager

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -355,3 +355,8 @@
 
 @toggle-on-bg: @green;
 @toggle-off-bg: #eee;
+
+
+// Pager
+// -------------------------
+@pager-border-radius:           @btn-radius;
